--- a/styles/main.css
+++ b/styles/main.css
@@ -5,13 +5,32 @@
 body {
   height: 100vh;
   margin: 0;
+  background-image: url("https://www.clipartkey.com/mpngs/m/104-1041722_transparent-insect-repellent-clipart-cartoon-of-mosquito-repellent.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position-x: 50%;
+}
+.header{
+  display: flex;
+  justify-content: center;
+}
+.h1{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 100px;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
 }
 
 .grid-wrapper {
-  height: 100vh;
   display: flex;
   justify-content: center;
-  margin-bottom: -30%;
+
 }
 
 .grid {
@@ -20,10 +39,12 @@ body {
   height: 500px;
   width: 500px;
   display: flex;
+  position: relative;
   flex-wrap: wrap;
   /* background-image: url("https://res.cloudinary.com/do68wjft3/image/upload/c_scale,h_500,w_500/v1604682246/cloud_hmvofs.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
+  margin-top: 10%;
 }
 
 .grid div {
@@ -42,8 +63,8 @@ body {
 }
 .grid-2-container{
   display: flex;
-  margin-top: 15%;
   justify-content: center;
+  margin-left: 15%;
 }
 
 .grid-2 p {
@@ -60,15 +81,29 @@ body {
 .restart-container{
   display: flex;
   position: absolute;
-  margin-top: -70%;
+  margin-top: -40%;
+  margin-left: 42%;
+  
 }
 .game-over{
   display: flex;
   position: absolute;
-  margin-top: -70%;
-  font-size: 100px;
+  margin-top: -60%;
+  font-size: 200px;
+  margin-left: 20%;
 }
-
+.restart{
+  height: 50%;
+  width: 100%;
+  padding: 20px 100px;
+}
+.start{
+  height: 50%;
+  width: 100%;
+  padding: 20px 100px;
+  margin-top: 50%;
+  margin-left: 250%;
+}
 .bugOne {
   background-image: url('https://res.cloudinary.com/do68wjft3/image/upload/c_scale,h_255,w_255/v1604682912/bug1_xijrfs.png');
   background-repeat: no-repeat;
