--- a/styles/main.css
+++ b/styles/main.css
@@ -5,34 +5,59 @@
 body {
   height: 100vh;
   margin: 0;
+  display: flex;
   background-image: url("https://www.clipartkey.com/mpngs/m/104-1041722_transparent-insect-repellent-clipart-cartoon-of-mosquito-repellent.png");
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
-  background-position-x: 50%;
+  background-size: cover;
+  align-self: center;
+  background-color: coral;
+  align-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
 }
-.header{
+header{
   display: flex;
   justify-content: center;
 }
-.h1{
+h1{
   display: flex;
   justify-content: center;
   text-align: center;
   font-size: 100px;
+  font-family: 'Ranchers', cursive;
+  color: green;
 }
-
+h2{
+  display: flex;
+  font-size: 60px;
+  align-self: center;
+  position: relative;
+  font-family: 'Ranchers', cursive;
+  color: green;
+}
+.instructions{
+  position: relative;
+  font-family: 'Ranchers', cursive;
+  font-size: 40px;
+  color: green;
+}
 .container{
   display: flex;
   justify-content: center;
   font-size: 30px;
 }
-
+.grid-flex{
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-content: center;
+}
 .grid-wrapper {
   display: flex;
+  position: relative;
   justify-content: center;
-
 }
-
 .grid {
   box-shadow: 10px;
   color: black;
@@ -41,68 +66,89 @@ body {
   display: flex;
   position: relative;
   flex-wrap: wrap;
-  /* background-image: url("https://res.cloudinary.com/do68wjft3/image/upload/c_scale,h_500,w_500/v1604682246/cloud_hmvofs.jpg"); */
   background-repeat: no-repeat;
   background-size: cover;
   margin-top: 10%;
 }
-
 .grid div {
   border: 1px solid black;
   height: 10%;
   width: 10%;
 }
-
+.grid-2-container{
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
 .grid-2 {
   box-shadow: 10px;
   color: black;
   height: 500px;
   width: 500px;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: -50%;
 }
-.grid-2-container{
-  display: flex;
-  justify-content: center;
-  margin-left: 15%;
-}
-
 .grid-2 p {
   border: 1px solid black;
   height: 10%;
   width: 10%;
+  background-color: white;
 }
-
+.container-2{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
 .start-container{
   display: flex;
-  position: absolute;
-  margin-top: -80%;
+  position: relative;
+  justify-content: center;
+  margin-top: 50%;
 }
-.restart-container{
+.game-box{
   display: flex;
-  position: absolute;
+  position: relative;
+  justify-content: center;
+  align-content: center;
+  margin-top: 5%;
   margin-top: -40%;
-  margin-left: 42%;
-  
 }
 .game-over{
   display: flex;
-  position: absolute;
-  margin-top: -60%;
-  font-size: 200px;
-  margin-left: 20%;
-}
-.restart{
-  height: 50%;
-  width: 100%;
-  padding: 20px 100px;
+  position: relative;
+  font-size: 150px;
+  margin-top: 5%;
+  font-family: 'Ranchers', cursive;
+  color: green;
 }
 .start{
   height: 50%;
-  width: 100%;
-  padding: 20px 100px;
-  margin-top: 50%;
-  margin-left: 250%;
+  width: 50%;
+  padding: 20px 10px;
+  font-family: 'Ranchers', cursive;
+  background-color: darkgray;
+}
+.restart-container{
+  display: flex;
+  justify-content: center;
+  margin-top: -50%;
+
+}
+.restart{
+  height: 4%;
+  width: 30%;
+  position: absolute;
+  padding: 10px 10px 20px 10px;
+  font-family: 'Ranchers', cursive;
+  background-color: darkgray;
+}
+.scoreText{
+  margin-top: 5%;
+  font-family: 'Ranchers', cursive;
+  color: green;
 }
 .bugOne {
   background-image: url('https://res.cloudinary.com/do68wjft3/image/upload/c_scale,h_255,w_255/v1604682912/bug1_xijrfs.png');
@@ -163,4 +209,58 @@ body {
   background-image: url('https://res.cloudinary.com/do68wjft3/image/upload/c_scale,h_255,w_255/v1604681071/bug12_x4fzxw.jpg');
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+@media only screen and (max-width: 600px) {
+.grid {
+  height: 300px;
+  width: 300px;
+}
+.game-box{
+margin-top: -170%;
+}
+.game-over{
+  font-size: 100px;
+  text-align: center;
+}
+.grid-2 p {
+  height: 5%;
+  width: 7%;
+}
+.grid-2 {
+  margin-left: 10%;
+}
+h1{
+  font-size: 50px;
+}
+.start-container{
+  margin-top: 80%;
+}
+h2{
+  font-size: 30px;
+}
+.container{
+  font-size: 20px;
+}
+body{
+  background-size: cover;
+  background-size: 160%;
+  background-position-y: 1%;
+}
+.start-container{
+  margin-top: 0%;
+}
+.start{
+  margin-top:80%;
+  height: 15%;
+  width: 30%;
+  padding: 20px 20px;
+}
+.restart-container{
+  margin-top: 5%;
+}
+.restart{
+  width: 30%;
+  padding: 10px 10px 20px 10px;
+}
 }
